# bird_cv

./: .pre-commit-config.yaml  README.md  makefile  pipeline_temp.ipynb  pyproject.toml  run.sh  run_crop_yolo.sh  run_predict_and_store_segments.sh
bird_cv/: __init__.py  annotations_to_yolo.py  get_label_studio_annotations.py  get_label_tables.py  get_split_guidance.py  run_label_studio_to_yolo.py  show_yolo_annotations.py  utils.py
bird_cv/classification/: build_clip_index.py  evaluate_video_model.py  extract_behavior_clips.py  train_video_model.py  videomae_demo.ipynb
bird_cv/detection/: detect_birds.yaml  evaluate_yolo.py  fasterrcnn_resnet.py  mot_evaluate.py  tracker.yaml  train_yolo.py  tune_yolo.py
bird_cv/pipelines/: config.py
bird_cv/pipelines/classification/: config.toml  pipeline.py
bird_cv/pipelines/detection/: config.toml  pipeline.py  run_fasterrcnn.py
bird_cv/pipelines/evaluation/: config.toml  pipeline.py
bird_cv/pipelines/preprocessing/: config.toml  pipeline.py
bird_cv/pipelines/segment_videos/: crop_bboxes.py  segment_videos.py
bird_cv/preprocessing/: annotations_to_yolo.py  crop_yolo_labels.py  get_label_tables.py  get_split_guidance.py  image_utils.py  run_label_studio_to_yolo.py  show_yolo_annotations.py
bird_cv/segment_videos/: segment_videos.py
bird_cv/segmentation/: evaluate.py  find_test_segmentations.ipynb  frames.py  segmenation_evaluation.ipynb  segment.py  smooth.py  utils.py  visualize.py
bird_cv/tasks/: run_crop_yolo.py  run_evaluate_video_model.py  run_extract_behavior_clips.py  run_mot_evaluate.py  run_predict_and_store_segments.py  run_segment_and_evaluate.py  run_tracking.py  run_train_video_model.py
tests/: test_annotations_to_yolo.py  test_get_label_tables.py  test_get_split_guidance.py  test_label_studio_annotations.py  test_show_yolo_annotations.py
tests/preprocessing/: test_annotations_to_yolo.py  test_get_label_tables.py  test_get_split_guidance.py  test_label_studio_annotations.py  test_show_yolo_annotations.py
