[tool.poetry]
name = "bird-cv"
version = "0.1.0"
description = "Caged bird migratory behavior detection"
authors = ["Sean Dougherty <sldough21@gmail.com>"]
license = "LICENSE"
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.12, <4"
numpy = "^2.0.0"
pandas = "^2.2.2"
polars = "^1.30.0"
label-studio = "^1.20.0"
matplotlib = "^3.10.0"
seaborn = "^0.13.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.14.0"
pre-commit = "^4.0.0"
pytest = "^9.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
