[tool.poetry]
name = "bird-cv"
version = "0.1.0"
description = "Caged bird migratory behavior detection"
authors = ["Sean Dougherty <sldough21@gmail.com>"]
license = "LICENSE"
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.12, <4"
numpy = ">1.21.0, <2"
pandas = "^2.2.2"
polars = "^1.30.0"
label-studio = "^1.20.0"
matplotlib = "^3.10.0"
seaborn = "^0.13.0"
ipykernel = "^7.0"
ultralytics = "^8.3.0"
torch = ">=2.5.1, <3.0"
torchvision = ">=0.20.1, <3.0"
ray = {extras = ["tune"], version = ">=2.1, <3.0"}
wandb = ">=0.22, <1.0"
motmetrics = ">=1.4, <2.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.14.0"
pre-commit = "^4.0.0"
pytest = "^9.0.0"
mypy = "^1.15.0"


[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
