[project]
name = "bird-cv"
version = "0.1.0"
description = "Caged bird migratory behavior detection"
authors = [{ name = "Sean Dougherty", email = "sldough21@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12, <4"

dependencies = [
    "numpy>1.21.0,<2",
    "pandas>=2.2.2",
    "polars>=1.30.0",
    "label-studio>=1.20.0",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.0",
    "ipykernel>=7.0",
    "ipywidgets>=8.0,<9.0",
    "ultralytics>=8.3.0",
    "torch>=2.5.1,<3.0",
    "torchvision>=0.20.1,<3.0",
    "transformers>=5.1.0,<6.0",
    "ray[tune]>=2.1,<3.0",
    "wandb>=0.22,<1.0",
    "motmetrics>=1.4,<2.0",
    "scikit-learn>=1.8.0,<2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.0",
    "pre-commit>=4.0.0",
    "pytest>=9.0.0",
    "mypy>=1.15.0",
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cuda", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cuda", marker = "sys_platform == 'linux'" },
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
